# tryto

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  rust-lint.yaml  rust.yaml
src/: config.rs  main.rs  prompts.rs  providers.rs  response.rs  setup.rs  theme.rs  ui.rs
src/prompts/: command_generator.md  executables.rs  mod.rs  os_info.rs  tools.toml
src/providers/: provider.rs  providers.toml  registry.rs
src/ui/: confirmation.rs  example_response.json  theme.rs
src/ui/presets/: aeroroot.toml  alacritty.toml  apprentice.toml  ayu-mirage.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  chiba-dark.toml  default.toml  derp.toml  deus.toml  dracula-iterm.toml  dracula.toml  electrophoretic.toml  gruvbox-dark.toml  gruvbox-light.toml  gruvbox.toml  hacktober.toml  iterm.toml  jetbrains-darcula.toml  kitty.toml  material-amber.toml  material-design.toml  modus-operandi.toml  modus-vivendi-tinted.toml  modus-vivendi.toml  molokai.toml  monokai-pro.toml  moonfly.toml  neon.toml  night-owl.toml  nightfly.toml  noirblaze.toml  nord.toml  nordiq.toml  nvim-dark.toml  nvim-light.toml  nvim.toml  onedark.toml  (+46 more)
