[package]
name = "tryto"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
tokio = { version = "1", features = ["full"] }
termimad = "0.31"
indicatif = "0.17"
owo-colors = "4.0"
clap = { version = "4.5", features = ["derive"] }
